fix: remove images on mobile - Removed images from mobile site to prevent formatting issues

--- a/about.css
+++ b/about.css
@@ -60,10 +60,6 @@ right: 62px;
 }    
             
 .image {
-position: absolute;
-height: -1px;
-width: -1px;
-top: 750px;
-right: 500px
+display: none;
 }
 }
