--- a/styles.css
+++ b/styles.css
@@ -68,10 +68,6 @@ right: 62px;
 }    
             
 .image {
-position: absolute;
-height: -1px;
-width: -1px;
-top: 750px;
-right: 500px
+display: none;
 }
 }
